Rework stracture of Lessons and Subjects